# proyecto1TelematicaBackup

./: README.md  docker-compose.gateway.yml  docker-compose.mom1.yml  docker-compose.mom2.yml  docker-compose.mom3.yml  docker-compose.yml  mom-key.pem
client/: client.py
cpp-mom/: README.md
documentacion/: Resumen_Ejecutivo.md  casouso.wsd  clases.wsd  componentes.wsd  componentesc4.wsd  contenedores.wsd  contexto.wsd  descripcion_apisRest.md  manual_despliegue.md  replicacio_particionamiento.md  requisitos.md  secuencia.wsd  seguridad.md
flask/: app.py
flask/templates/: index.html  layout.html  panel.html  resultado.html
mom/: .dockerignore  CMakeLists.txt  Dockerfile  requirements.sh  run_dev.sh
mom/data/mom1/: mom50051.db  nodos.txt
mom/data/mom2/: mom50052.db
mom/data/mom3/: mom50051.db  mom50053.db  nodos.txt
mom/include/: NodoManager.hpp  broker.hpp  message.hpp  mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  persistence.hpp  queue.hpp  topic.hpp  user.hpp
mom/proto/: mom.proto
mom/src/: NodoManager.cpp  broker.cpp  mom_server.cpp  server.cpp
mom/storage/: message.cpp  persistence.cpp  queue.cpp  topic.cpp  user.cpp
mom_gateway/: Dockerfile  go.mod  go.sum  grpc_client.go  main.go  routes.go
mom_gateway/cluster/: cluster.go
mom_gateway/config/: mom_cluster.json
mom_gateway/handlers/: auth.go  cluster_iface.go  colas.go  topicos.go  utils.go
mom_gateway/pb/: mom.pb.go  mom_grpc.pb.go
